- fixed database access routes that were not correctly closing the connection, leading to issues. - overrode some bootstrap modal settings that were causing modals to overflow the page.

--- a/css/contents.css
+++ b/css/contents.css
@@ -209,9 +209,9 @@ tr {
     gap: 10px;
 }
 
-.modal-content{
+/* .modal-content{
     width: 80% !important; 
-}
+} */
 
 #ai-good{
     font-size: 2em;
